# warehouse

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
app/: admin.py  models.py  signals.py
app/migrations/: 0001_initial.py  0002_remove_product_count_remove_product_price.py  0003_staff_alter_transmitting_receiver_transmitting_staff.py  0004_remove_transmitting_receiver_alter_staff_name_and_more.py  0005_alter_staff_department_id_alter_transmitting_product_and_more.py  0006_remove_staff_department_id_alter_staff_department.py
config/: settings.py
