[tool.poetry]
name = "warehouse"
version = "0.1.0"
description = ""
authors = ["jakha921 <jakha921@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
django-cors-headers = "^4.3.1"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
